--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.6",
@@ -27,6 +28,7 @@
     "react-hook-form": "^7.61.1",
     "react-hot-toast": "^2.5.2",
     "recharts": "^3.1.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.0",
     "zod": "^4.0.14",
     "zustand": "^5.0.7"
