--- a/package.json
+++ b/package.json
@@ -17,19 +17,28 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@react-pdf/renderer": "^4.3.0",
     "@supabase/ssr": "latest",
     "@tanstack/react-table": "^8.21.3",
+    "@types/qrcode": "^1.5.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
     "framer-motion": "^12.23.12",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
+    "jspdf-font": "^1.0.7",
     "lucide-react": "^0.511.0",
     "next": "latest",
     "next-themes": "^0.4.6",
+    "puppeteer": "^24.16.1",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.61.1",
     "react-hot-toast": "^2.5.2",
+    "react-pdf": "^10.0.1",
     "recharts": "^3.1.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.0",
