--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "react-hook-form": "^7.61.1",
     "react-hot-toast": "^2.5.2",
     "react-pdf": "^10.0.1",
-    "recharts": "^3.1.0",
+    "recharts": "^3.1.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.0",
     "zod": "^4.0.14",
@@ -51,6 +51,8 @@
     "@types/node": "^20.19.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8.39.1",
+    "@typescript-eslint/parser": "^8.39.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
